Fixing home page spacing

--- a/src/styles/_auth.scss
+++ b/src/styles/_auth.scss
@@ -1,125 +1,125 @@
-$main-green: rgb(54, 159, 89);
-$off-white: #f0f5f3;
-
 .auth-page {
     background-color: $off-white;
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
-    gap: 0.5rem;
 
-    .app-header {
-        padding-left: 10vw;
-        width: 50%;
+    .auth-container {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        gap: 2rem;
+        max-width: 900px;
+        margin: 0 auto;
 
-        .app-title {
+        .app-header {
             display: flex;
-            align-items: center;
-        }
-        
-        div {
-            color: $main-green;
-            font-size: 40px;
-            font-weight: 400;
-        }
+            flex-direction: column;
+            align-items: flex-end;
 
-        h3 {
-            font-weight: 300;
-        }
-    }
-
-    .auth-form-container {
-        padding-right: 10vw;
-        width: 50%;
-
-        .auth-form {
-            background-color: white;
-            padding: 0.75rem;
-            border-radius: 10px;
-            max-width: 500px;
-            box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-
-            p {
-                text-align: center;
-                font-weight: 300;
-
-                span {
-                    color: $main-green;
-                    font-weight: 400;
-                    cursor: pointer;
-
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-            }
-
-            .auth-footer {
-                padding-top: 30px;
-            }
-
-            form {
+            .app-title {
                 display: flex;
-                flex-direction: column;
                 align-items: center;
-                gap: 0.75rem;
-                
-                input, button {
-                    width: 100%;
-                    height: 3rem;
-                    font-size: 16px;
-                    border-radius: 5px;
+            }
+            
+            div {
+                font-size: 40px;
+                font-weight: 400;
+            }
+
+            h3 {
+                font-weight: 300;
+            }
+        }
+
+        .auth-form-container {
+            .auth-form {
+                background-color: white;
+                padding: 1rem;
+                border-radius: 10px;
+                max-width: 500px;
+                box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+
+                p {
+                    text-align: center;
+                    font-weight: 300;
+
+                    span {
+                        color: $main-green;
+                        font-weight: 400;
+                        cursor: pointer;
+
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
                 }
 
-                input {
-                    padding: 0 0.5rem;
-                    border: 1px solid rgb(206, 206, 206);
+                .auth-footer {
+                    padding-top: 30px;
+                }
 
-                    &:focus {
-                        outline: 1px solid $main-green;
+                form {
+                    width: 400px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 0.75rem;
+                    
+                    input, button {
+                        width: 100%;
+                        height: 3rem;
+                        font-size: 16px;
+                        border-radius: 5px;
+                    }
+
+                    input {
+                        padding: 0 0.5rem;
+                        border: 1px solid rgb(206, 206, 206);
+
+                        &:focus {
+                            outline: 1px solid $main-green;
+                            border: none;
+                        }
+                    }
+
+                    button {
                         border: none;
+                        background-color: $main-green;
+                        color: white;
+                        transition: 0.1s ease-in-out filter;
+
+                        &:hover {
+                            filter: brightness(0.9);
+                        }
                     }
-                }
 
-                button {
-                    border: none;
-                    background-color: $main-green;
-                    color: white;
-                    transition: 0.1s ease-in-out filter;
-
-                    &:hover {
-                        filter: brightness(0.9);
+                    .form-entry {
+                        width: 100%;
+                        position: relative;
                     }
-                }
 
-                .form-entry {
-                    width: 100%;
-                    position: relative;
-                }
+                    .form-label {
+                        position: absolute;
+                        cursor: text;
+                        top: 0.9rem;
+                        left: 0.5rem;
+                        transition: all 0.2s ease-in-out;
+                        background-color: white;
+                        padding: 0 0.1rem;
+                        color: rgb(98, 98, 98);
+                    }
 
-                .form-label {
-                    position: absolute;
-                    cursor: text;
-                    top: 0.9rem;
-                    left: 0.5rem;
-                    transition: all 0.2s ease-in-out;
-                    background-color: white;
-                    padding: 0 0.1rem;
-                    color: rgb(98, 98, 98);
-                }
-
-                .form-input:focus + .form-label,
-                .form-input:not(:placeholder-shown).form-input:not(:focus) + .form-label {  
-                    top: -0.5rem;
-                    font-size: 12px;
+                    .form-input:focus + .form-label,
+                    .form-input:not(:placeholder-shown).form-input:not(:focus) + .form-label {  
+                        top: -0.5rem;
+                        font-size: 12px;
+                    }
                 }
             }
         }
     }
+
+
 }
 
 @media (max-width: 875px) {
