--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,16 @@
 @import "./_auth", "./_header", "./_main-feed";
 
+$main-green: rgb(54, 159, 89);
+$off-white: #f0f5f3;
+
+$text-grey: #626262;
+
 *, *::before, *::after {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: "Roboto", sans-serif;
+    color: #0f0f0f;
 }
 
 #root {
@@ -13,4 +19,20 @@
 
 button {
     cursor: pointer;
+}
+
+p {
+    font-size: clamp(16px, 5vw, 18px);
+}
+
+.p-smaller-text {
+    font-size: clamp(14px, 4vw, 16px);
+}
+
+.green {
+    color: $main-green;
+}
+
+.grey {
+    color: $text-grey;
 }
